# ADKbot

./: .gitignore  Dockerfile  LICENSE  README.md  core_agent_lines.sh  docker-compose.yml  help.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
adkbot/: __init__.py  __main__.py  adkbot.py
adkbot/agent/: __init__.py  adk_loop.py  callbacks.py  context.py  memory.py  skills.py  subagent.py
adkbot/agent/tools/: __init__.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
adkbot/api/: __init__.py  server.py
adkbot/bus/: __init__.py  queue.py
adkbot/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  registry.py  slack.py  telegram.py  wecom.py  weixin.py  whatsapp.py
adkbot/cli/: __init__.py  commands.py  onboard.py  stream.py
adkbot/command/: __init__.py  builtin.py  router.py
adkbot/config/: __init__.py  loader.py  paths.py  schema.py
adkbot/cron/: __init__.py  service.py
adkbot/heartbeat/: __init__.py  service.py
adkbot/session/: __init__.py  manager.py
adkbot/skills/: README.md
adkbot/skills/clawhub/: SKILL.md
adkbot/skills/cron/: SKILL.md
adkbot/skills/github/: SKILL.md
adkbot/skills/skill-creator/: SKILL.md
adkbot/skills/summarize/: SKILL.md
adkbot/skills/tmux/: SKILL.md
adkbot/skills/weather/: SKILL.md
adkbot/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
adkbot/utils/: __init__.py  evaluator.py  helpers.py  runtime.py
bridge/: README.md  package.json
bridge/src/: index.ts  whatsapp.ts
docs/: CHANNEL_PLUGIN_GUIDE.md  COMMANDS.md  CONTRIBUTING.md  PYTHON_SDK.md  SECURITY.md  USER_GUIDE.md
sessions/: README.md
tests/: conftest.py  test_adkbot_facade.py  test_build_status.py  test_commands.py  test_docker.sh  test_project_config.py
tests/agent/: test_consolidate_offset.py  test_context_prompt_cache.py  test_evaluator.py  test_onboard_logic.py  test_session_manager_history.py  test_skill_creator_scripts.py  test_subagent.py
tests/api/: test_server.py
tests/bus/: test_queue.py
tests/channels/: test_base_channel.py  test_channel_manager_delta_coalescing.py  test_channel_plugins.py  test_dingtalk_channel.py  test_discord_channel.py  test_email_channel.py  test_feishu_markdown_rendering.py  test_feishu_post_content.py  test_feishu_reply.py  test_feishu_streaming.py  test_feishu_table_split.py  test_feishu_tool_hint_code_block.py  test_matrix_channel.py  test_qq_channel.py  test_slack_channel.py  test_telegram_channel.py  test_weixin_channel.py  test_whatsapp_channel.py
tests/cli/: test_cli_input.py
tests/config/: test_config_migration.py  test_config_paths.py  test_schema.py
tests/cron/: test_cron_service.py
tests/security/: test_security_network.py
tests/tools/: test_exec_security.py  test_filesystem_tools.py  test_mcp_tool.py  test_message_tool.py  test_tool_registry.py  test_tool_validation.py  test_web_fetch_security.py  test_web_search_tool.py
tests/utils/: test_helpers.py
(+3 files in other folders)
